--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
         "start": "pcf-scripts start"
     },
     "dependencies": {
+        "@fluentui/react": "^8.15.1",
         "bootstrap": "^4.6.0",
         "jquery": "^3.6.0",
         "popper.js": "^1.16.1"
     },
     "devDependencies": {
-        "pcf-scripts": "^1",
-        "pcf-start": "^1",
         "@types/node": "^10.12.18",
-        "@types/powerapps-component-framework": "^1.2.0"
+        "@types/powerapps-component-framework": "^1.2.0",
+        "@types/react": "^17.0.8",
+        "pcf-scripts": "^1",
+        "pcf-start": "^1"
     }
 }
