--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@fluentui/react": "^8.15.1",
+        "@material-ui/core": "^4.11.4",
         "bootstrap": "^4.6.0",
         "jquery": "^3.6.0",
         "popper.js": "^1.16.1"
