--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "popper.js": "^1.16.1"
     },
     "devDependencies": {
+        "@testing-library/react": "^12.0.0",
         "@types/node": "^10.12.18",
         "@types/powerapps-component-framework": "^1.2.0",
         "@types/react": "^17.0.8",
