--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "build": "pcf-scripts build",
         "clean": "pcf-scripts clean",
         "rebuild": "pcf-scripts rebuild",
-        "start": "pcf-scripts start"
+        "start": "pcf-scripts start",
+        "test": "jest --watch"
     },
     "dependencies": {
         "@fluentui/react": "^8.15.1",
@@ -16,11 +17,29 @@
         "popper.js": "^1.16.1"
     },
     "devDependencies": {
+        "@babel/preset-typescript": "^7.14.5",
+        "@testing-library/jest-dom": "^5.14.1",
+        "typescript": "^4.3.5",
+        "jest": "^27.0.6",
+        "ts-jest": "^27.0.3",
+        "@types/jest": "^26.0.24",
         "@testing-library/react": "^12.0.0",
         "@types/node": "^10.12.18",
         "@types/powerapps-component-framework": "^1.2.0",
         "@types/react": "^17.0.8",
         "pcf-scripts": "^1",
         "pcf-start": "^1"
+    },
+    "jest": {
+        "preset": "ts-jest",
+        "testEnvironment": "jsdom",
+        "collectCoverage": false,
+        "moduleNameMapper": {
+            "office-ui-fabric-react/lib/(.*)$": "office-ui-fabric-react/lib-commonjs/$1"
+        },
+        "transformIgnorePatterns": [
+            "node_modules/(?!office-ui-fabric-react)",
+            "out/"
+        ]
     }
 }
